--- a/client/imports/app/dashboard/dashboard.html
+++ b/client/imports/app/dashboard/dashboard.html
@@ -20,8 +20,9 @@
             <ion-col width-50>
             	<ion-card>
                       <ion-card-content>
-                        <img src="/assets/img/letter1.png" alt=""/>
-                        <span>Message</span>
+                        <!--<img src="/assets/img/letter1.png" alt=""/>-->
+			<ion-icon ios="ios-search" md="ios-search-outline" class="blue"></ion-icon>
+                        <span>Search</span>
                       </ion-card-content>
 				</ion-card>
             </ion-col>
@@ -40,7 +41,7 @@
             	<ion-card>
                       <ion-card-content>
                      <img src="/assets/img/question1.png" alt=""/>
-                        <span>Analysis</span>
+                        <span>Posture Analysis</span>
                       </ion-card-content>
 				</ion-card>
             </ion-col>
@@ -58,8 +59,9 @@
             <ion-col width-50 >
             	<ion-card>
                       <ion-card-content>
-                        <img src="/assets/img/agreement1.png" alt=""/>
-                        <span>Search</span>
+                        <!--<img src="/assets/img/agreement1.png" alt=""/>-->
+			<ion-icon ios="ios-settings" md="ios-settings-outline"></ion-icon>
+                        <span>Settings</span>
                       </ion-card-content>
 				</ion-card>
             </ion-col>
