infinite scroll and search

--- a/client/imports/app/dashboard/dashboard.html
+++ b/client/imports/app/dashboard/dashboard.html
@@ -1,16 +1,10 @@
 <ion-header class="dashboard_head header-dash">
-  <ion-navbar>
-   <button ion-button icon-only menuToggle>
-      <ion-icon name="menu"></ion-icon> 
-    </button>
-    <div class="top_title">
-      DASHBOARD
-    </div>
-    <div class="left_icon">
-    	 <img src="/assets/img/bell1.png" alt=""/>
-         <img src="/assets/img/mail1.png" alt=""/>
-    </div>
-  </ion-navbar>
+	<ion-navbar>
+		<button ion-button icon-only menuToggle>
+			<ion-icon name="menu"></ion-icon> 
+		</button>
+		<div class="top_title"> DASHBOARD </div>	  
+	</ion-navbar>
 </ion-header>
 
 <ion-content class="content1">
@@ -20,8 +14,7 @@
             <ion-col width-50>
             	<ion-card>
                       <ion-card-content>
-                        <!--<img src="/assets/img/letter1.png" alt=""/>-->
-			<ion-icon ios="ios-search" md="ios-search-outline" class="blue"></ion-icon>
+						<ion-icon ios="ios-search" md="ios-search-outline"></ion-icon>
                         <span>Search</span>
                       </ion-card-content>
 				</ion-card>
@@ -59,8 +52,7 @@
             <ion-col width-50 >
             	<ion-card>
                       <ion-card-content>
-                        <!--<img src="/assets/img/agreement1.png" alt=""/>-->
-			<ion-icon ios="ios-settings" md="ios-settings-outline"></ion-icon>
+            			<ion-icon ios="ios-settings" md="ios-settings-outline"></ion-icon>
                         <span>Settings</span>
                       </ion-card-content>
 				</ion-card>
