added search patient while assigning uploaded picture to patient

--- a/client/imports/app/dashboard/picture-upload.html
+++ b/client/imports/app/dashboard/picture-upload.html
@@ -24,13 +24,15 @@
             Picture has been saved. Please select patient to finish uploading.
         </p>
         <img src="{{image.url}}" style="margin: 10px; max-height: 250px;" />
+        
+        <ion-searchbar (ionInput)="filter($event)"></ion-searchbar>
         <ion-list radio-group [(ngModel)]="patientId">
             <ion-list-header>
                 Select Patient
             </ion-list-header>
 
             <ion-item *ngFor="let patient of patients">
-                <ion-label>{{patient.firstName}} {{patient.lastName}}</ion-label>
+                <ion-label>{{patient.fullName}}</ion-label>
                 <ion-radio checked="false" value="{{patient._id}}"></ion-radio>
             </ion-item>
         </ion-list>
