changes in picture upload to select patient first then upload

--- a/client/imports/app/dashboard/dashboard.html
+++ b/client/imports/app/dashboard/dashboard.html
@@ -11,7 +11,7 @@
   <div class="dashboard_content">
     <ion-grid>
       <ion-row>
-        <ion-col width-50 [navPush]="picUpload">
+        <ion-col width-50>
           <ion-card>
             <ion-card-content>
               <ion-icon ios="ios-reverse-camera" md="ios-reverse-camera-outline"></ion-icon>
