--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="msapplication-tap-highlight" content="no">
 
     <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+    
     <link rel="manifest" href="assets/manifest.json">
     <meta name="theme-color" content="#4e8ef7">
 
@@ -19,7 +20,9 @@
     </script>-->
 
     <link href="/assets/css/style.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link href="/build/main.css" rel="stylesheet">
+    
 </head>
 
 <body>
